k8s/bes/deluge/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: deluge
  namespace: media
spec:
  selector:
    app: deluge
  ports:
    - port: 8112
      targetPort: 8112
