k8s/bes/deluge/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: deluge
  namespace: media
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`deluge.sw1a1aa.uk`)
      kind: Rule
      services:
        - name: deluge
          port: 8112
  tls:
    certResolver: letsencrypt
